# Monte-Carlo-Raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
assets/kernels/: BDPT.cl  Denoise.cl  PathTracing.cl  ToneMapping.cl  bxdfs.cl  cameras.cl  colors.cl  filters.cl  geometry.cl  image_samplers.cl  kernel_data.h  lights.cl  materials.cl  math.cl  matrix.cl  reconstruction.cl  rng.cl  samplers.cl  textures.cl
assets/shaders/: forwardShadingPass.frag  sceneVisualizationPass.frag
assets/shaders/voxelConeTracing/: scenePass.frag
source/: main.cpp
source/application/PathTracer/: PathTracingApp.cpp  PathTracingApp.h
source/application/PathTracer/GUI/: PathTracingGUI.cpp  PathTracingGUI.h  PathTracingSettings.cpp  PathTracingSettings.h
source/application/PathTracer/raytracing/: PlatformGUI.cpp  PlatformGUI.h  rt_globals.cpp  rt_globals.h
source/application/PathTracer/raytracing/kernels/: RTKernel.cpp  RTKernel.h  RTNoiseGenerationKernel.cpp  RTNoiseGenerationKernel.h
source/application/PathTracer/raytracing/lights/: RTLightComponent.h
source/application/PathTracer/raytracing/material/: RTUberMaterialComponent.h
source/application/PathTracer/raytracing/renderPasses/: RTBDPTPass.cpp  RTBDPTPass.h  RTDenoisePass.cpp  RTDenoisePass.h  RTDisplayPass.cpp  RTDisplayPass.h  RTPathTracingPass.cpp  RTPathTracingPass.h  RTPrimaryRaysPass.cpp  RTPrimaryRaysPass.h  RTReconstructionPass.cpp  RTReconstructionPass.h  RTToneMappingPass.cpp  RTToneMappingPass.h
source/application/PathTracer/raytracing/sampling/: sampling.h  sobol.h
source/application/PathTracer/raytracing/scene/: HostScene.cpp  HostScene.h  RTScene.cpp  RTScene.h  RTShapeComponent.cpp  RTShapeComponent.h
source/application/PathTracer/raytracing/system/: KernelManager.cpp  KernelManager.h  PlatformManager.cpp  PlatformManager.h  RTBufferManager.cpp  RTBufferManager.h
source/application/PathTracer/raytracing/textures/: RTInteropTexture2D.cpp  RTInteropTexture2D.h  RTTextures.h
source/application/PathTracer/raytracing/util/: CLHelper.h  RTUtil.cpp  RTUtil.h
source/engine/: Application.cpp  Application.h  Engine.cpp  Engine.h  editor_defines.h  globals.cpp  globals.h
source/engine/camera/: Camera.h  CameraComponent.cpp  CameraComponent.h  FreeCameraViewController.cpp  FreeCameraViewController.h
source/engine/ecs/: ECS.cpp  ECS.h  EntityManager.cpp  EntityManager.h  System.h
source/engine/event/: EntityCreatedEvent.h  EntityPreDestroyedEvent.h  TransformStaticStatusChangedEvent.h
source/engine/geometry/: BBox.cpp  BBox.h  Ray.cpp  Ray.h  Transform.cpp  Transform.h  intersection.cpp  intersection.h
source/engine/gui/: GUIElements.h  GUISettings.h  GeometryBufferGUI.cpp  GeometryBufferGUI.h  ModelImportGUI.cpp  ModelImportGUI.h  StatsWindow.cpp  StatsWindow.h
source/engine/input/: Input.h
source/engine/interfaces/: IUpdateable.h
source/engine/rendering/: Material.cpp  Material.h  Screen.cpp  Screen.h  Texture2D.cpp  Texture2D.h  Window.cpp  Window.h
source/engine/rendering/architecture/: RenderPass.h  RenderPipeline.cpp  RenderPipeline.h
source/engine/rendering/debug/: DebugRenderer.cpp  DebugRenderer.h
source/engine/rendering/geometry/: GeometryGenerator.cpp  GeometryGenerator.h  Mesh.cpp  Mesh.h
source/engine/rendering/lights/: DiskAreaLight.h  PointLight.cpp  PointLight.h  TriangleMeshAreaLight.h
source/engine/rendering/renderPasses/: ForwardScenePass.cpp  SceneGeometryPass.cpp  SceneVisualizationPass.cpp  SceneVisualizationPass.h  ShadowMapPass.cpp
source/engine/rendering/renderer/: MeshRenderer.cpp  MeshRenderer.h  MeshRenderers.cpp  MeshRenderers.h
source/engine/rendering/settings/: RenderingSettings.cpp  RenderingSettings.h
source/engine/rendering/shader/: Shader.cpp  Shader.h
source/engine/rendering/voxelConeTracing/: Downsampler.cpp  GIPass.cpp  Globals.cpp  Globals.h  RadianceInjectionPass.cpp  VoxelizationPass.cpp
source/engine/rendering/voxelConeTracing/settings/: VoxelConeTracingSettings.h
source/engine/rendering/voxelConeTracing/visualization/: Visualizer.cpp
source/engine/resource/: AssetImporter.cpp  AssetImporter.h  Model.cpp  Model.h  ResourceManager.cpp  ResourceManager.h  serialization.cpp  serialization.h
source/engine/util/: Logger.cpp  Logger.h  NamingConvention.h  QueryManager.cpp  QueryManager.h  Random.cpp  Random.h  async_util.h  colors.h  file.cpp  file.h  math.h  util.h
source/engine/util/ECSUtil/: ECSUtil.cpp  ECSUtil.h  EntityCreator.cpp  EntityCreator.h  EntityPicker.cpp
source/engine/util/morton/: morton.h
